# macnuf

./: Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: publish.yml  update_manuf.yml
data/: manuf.txt
examples/: basic.rs
src/: eui.rs  lib.rs
tools/: make-manuf.py
