[package]
name = "macnuf"
description = "A #![no_std] Rust library to get the manufacturer of a specific MAC address"
authors = ["Valdemar Erk <crates@erk.dev>"]
version = "0.0.0+20250210"
categories = ["network-programming", "no-std"]
license-file = "LICENSE.md"
readme = "README.md"
include = [
    "/CODE_OF_CONDUCT.md",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/build.rs",
    "/examples/**",
    "/src/**",
    "/data/**",
]
keywords = ["network", "mac", "manufacturer", "mac-address", "manuf"]
repository = "https://github.com/erk-/macnuf"
edition = "2021"

[package.metadata.files]
include = ["data/manuf.txt"]

[dependencies]
