[package]
name = "macnuf"
description = "A #![no_std] Rust library to get the manufacturer of a specific MAC address"
authors = ["Valdemar Erk <crates@erk.dev>"]
version = "0.1.15+20250526"
categories = ["network-programming", "no-std"]
license-file = "LICENSE.md"
readme = "README.md"
include = [
    "/CODE_OF_CONDUCT.md",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/build.rs",
    "/examples/**",
    "/src/**",
    "/data/**",
]
keywords = ["network", "mac", "manufacturer", "mac-address", "manuf"]
repository = "https://github.com/erk-/macnuf"
documentation = "https://docs.rs/macnuf"
edition = "2021"

[package.metadata.files]
include = ["data/manuf.txt"]

[dependencies]
phf = { version = "0.11.1", default-features = false }

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.3"
